@@ -11,6 +11,10 @@ Changes in @NEW@:
   o Client Changes:
     * Conary will now re-read /etc/resolv.conf if an error occurs when
       resolving a hostname. (CNY-2703)
+    * Migrate now only preserves local installs of groups and kernels.
+      Before, all manually installed components and troves that were
+      referenced by the group being migrated would be updated instead
+      of erased. (CNY-2569)
   o Bug Fixes:
     * The internal function _ensureReadableRollbackStatus now collects the
       necessary state it needs to succed within itself instead of relying on
